--- a/index.html
+++ b/index.html
@@ -37,10 +37,25 @@
 
 
 <body>
+
+  <div id="left">
+  <h1>
+    The Design Radio Channel
+    you will all know and love
+  </h1>
+
+  <h1>
+░┼░┼░┼░┼░┼░┼░
+</h1>
+
+</div>
+
+<div id="right">
+
     <div class="chat">
         <script id="cid0020000266613940490" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">{"handle":"ididididradio","arch":"js","styles":{"a":"6600cc","b":100,"c":"FFFFFF","d":"FFFFFF","k":"6600cc","l":"6600cc","m":"6600cc","n":"FFFFFF","p":"10","q":"6600cc","r":100,"fwtickm":1}}</script>
     </div>
-
+</div>
 
 </body>
 </html>
