--- a/index.html
+++ b/index.html
@@ -58,12 +58,17 @@
 </div>
 
 <div id="show">
+
+  <div class="time">
+
+  </div>
   <div class="title">
 
   </div>
 
-  <div class=""
+  <div class="description"
 
 </div>
+
 </body>
 </html>
