--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="google" content="notranslate">
 
-    <title>ididididid raadio</title>
+    <title>ididididid radio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ididididid radio">
     <meta name="author" content="ididididid">
@@ -51,7 +51,7 @@
 </div>
 
 <div id="right">
-
+    HELLO
     <div class="chat">
         <script id="cid0020000266613940490" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">{"handle":"ididididradio","arch":"js","styles":{"a":"6600cc","b":100,"c":"FFFFFF","d":"FFFFFF","k":"6600cc","l":"6600cc","m":"6600cc","n":"FFFFFF","p":"10","q":"6600cc","r":100,"fwtickm":1}}</script>
     </div>
