--- a/index.html
+++ b/index.html
@@ -48,27 +48,133 @@
 ░┼░┼░┼░┼░┼░┼░
 </h1>
 
+<div class="show">
+
+  <img src="Rectangle 16.png">
+
+  <div class="time">
+12:00
+  </div>
+
+
+
+  <div class="description">
+    <h2 class="title">
+      HELLOOOOOOOOO
+    </h2>
+    <p>
+This is a show
+</p>
+<p class="creators">
+  Creators
+</p>
+</div>
+
+</div>
+
+<div class="show">
+
+  <img src="Rectangle 16.png">
+
+  <div class="time">
+12:00
+  </div>
+
+
+
+  <div class="description">
+    <h2 class="title">
+      HELLOOOOOOOOO
+    </h2>
+    <p>
+This is a show
+</p>
+<p class="creators">
+  Creators
+</p>
+</div>
+
+</div>
+
+<div class="show">
+
+  <img src="Rectangle 16.png">
+
+  <div class="time">
+12:00
+  </div>
+
+
+
+  <div class="description">
+    <h2 class="title">
+      HELLOOOOOOOOO
+    </h2>
+    <p>
+This is a show
+</p>
+<p class="creators">
+  Creators
+</p>
+</div>
+
+</div>
+
+<div class="show">
+
+  <img src="Rectangle 16.png">
+
+  <div class="time">
+12:00
+  </div>
+
+
+
+  <div class="description">
+    <h2 class="title">
+      HELLOOOOOOOOO
+    </h2>
+    <p>
+This is a show
+</p>
+<p class="creators">
+  Creators
+</p>
+</div>
+
+</div>
+
+<div class="show">
+
+  <img src="Rectangle 16.png">
+
+  <div class="time">
+12:00
+  </div>
+
+
+
+  <div class="description">
+    <h2 class="title">
+      HELLOOOOOOOOO
+    </h2>
+    <p>
+This is a show
+</p>
+<p class="creators">
+  Creators
+</p>
+</div>
+
 </div>
 
 <div id="right">
-    HELLO
     <div class="chat">
         <script id="cid0020000266613940490" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">{"handle":"ididididradio","arch":"js","styles":{"a":"6600cc","b":100,"c":"FFFFFF","d":"FFFFFF","k":"6600cc","l":"6600cc","m":"6600cc","n":"FFFFFF","p":"10","q":"6600cc","r":100,"fwtickm":1}}</script>
     </div>
 </div>
 
-<div id="show">
 
-  <div class="time">
-
-  </div>
-  <div class="title">
-
-  </div>
-
-  <div class="description"
-
-</div>
 
 </body>
 </html>
