--- a/index.html
+++ b/index.html
@@ -32,145 +32,43 @@
     <!-- Link caso haja algum stress com o browser é redirecionado para esse -->
 
     <link rel="stylesheet" href="main.css">
-
+    <link rel="stylesheet" href="https://use.typekit.net/xfv8pyk.css">
 </head>
 
 
 <body>
 
   <div id="left">
-  <h1>
-    The Design Radio Channel
-    you will all know and love
-  </h1>
-
-  <h1>
-░┼░┼░┼░┼░┼░┼░
-</h1>
+  <div id="header">
+    <img class="radio_logo" src="logo.svg">
+    <h1 class="header_title">
+      The Design Radio Channel
+      you will all know and love
+      <br>
+      ░┼░┼░
+    </h1>
+  </div>
 
 <div class="show">
 
-  <img src="Rectangle 16.png">
+  <img class="show_logo" src="Rectangle 16.png">
 
-  <div class="time">
-12:00
-  </div>
-
-
+  <p class="time">12:00</p>
 
   <div class="description">
-    <h2 class="title">
-      HELLOOOOOOOOO
-    </h2>
-    <p>
-This is a show
-</p>
-<p class="creators">
-  Creators
-</p>
-</div>
+      <h2 class="title">THE POWER OF ESCAPE</h2>
+      <p>Travel into space, body, sea and past.</p>
+  
+      <p class="creators"></p>Creators: Hannah, Johanna, Louisa, Othomane, Lukas </p>
 
-</div>
-
-<div class="show">
-
-  <img src="Rectangle 16.png">
-
-  <div class="time">
-12:00
   </div>
 
-
-
-  <div class="description">
-    <h2 class="title">
-      HELLOOOOOOOOO
-    </h2>
-    <p>
-This is a show
-</p>
-<p class="creators">
-  Creators
-</p>
-</div>
-
-</div>
-
-<div class="show">
-
-  <img src="Rectangle 16.png">
-
-</div>
-
-  <div class="time">
-12:00
-  </div>
-
-
-
-  <div class="description">
-    <h2 class="title">
-      HELLOOOOOOOOO
-    </h2>
-    <p>
-This is a show
-</p>
-<p class="creators">
-  Creators
-</p>
-</div>
-
-</div>
-
-<div class="show">
-
-  <img src="Rectangle 16.png">
-
-  <div class="time">
-12:00
-  </div>
-
-
-
-  <div class="description">
-    <h2 class="title">
-      HELLOOOOOOOOO
-    </h2>
-    <p>
-This is a show
-</p>
-<p class="creators">
-  Creators
-</p>
-</div>
-
-</div>
-
-<div class="show">
-
-  <img src="Rectangle 16.png">
-
-  <div class="time">
-12:00
-  </div>
-
-
-
-  <div class="description">
-    <h2 class="title">
-      HELLOOOOOOOOO
-    </h2>
-    <p>
-This is a show
-</p>
-<p class="creators">
-  Creators
-</p>
 </div>
 
 </div>
 
 <div id="right">
+  HEllo
     <div class="chat">
         <script id="cid0020000266613940490" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">{"handle":"ididididradio","arch":"js","styles":{"a":"6600cc","b":100,"c":"FFFFFF","d":"FFFFFF","k":"6600cc","l":"6600cc","m":"6600cc","n":"FFFFFF","p":"10","q":"6600cc","r":100,"fwtickm":1}}</script>
     </div>
