--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <div class="description">
       <h2 class="title">THE POWER OF ESCAPE</h2>
       <p>Travel into space, body, sea and past.</p>
-  
+
       <p class="creators"></p>Creators: Hannah, Johanna, Louisa, Othomane, Lukas </p>
 
   </div>
@@ -68,7 +68,9 @@
 </div>
 
 <div id="right">
-  HEllo
+    <div id="header">
+  <h1>Now playing:</h1>
+</div>
     <div class="chat">
         <script id="cid0020000266613940490" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">{"handle":"ididididradio","arch":"js","styles":{"a":"6600cc","b":100,"c":"FFFFFF","d":"FFFFFF","k":"6600cc","l":"6600cc","m":"6600cc","n":"FFFFFF","p":"10","q":"6600cc","r":100,"fwtickm":1}}</script>
     </div>
