--- a/index.html
+++ b/index.html
@@ -49,23 +49,92 @@
     </h1>
   </div>
 
-<div class="show">
+  <!-- THE POWER OF ESCAPE-->
+  <div class="show">
 
-  <img class="show_logo" src="Rectangle 16.png">
+    <img class="show_logo" src="placeholder.svg">
 
-  <p class="time">12:00</p>
+    <div class="time">12:00</div>
 
-  <div class="description">
-      <h2 class="title">THE POWER OF ESCAPE</h2>
-      <p>Travel into space, body, sea and past.</p>
-  
-      <p class="creators"></p>Creators: Hannah, Johanna, Louisa, Othomane, Lukas </p>
+    <div class="description">
+        <div class="title">THE POWER OF ESCAPE</div>
+        <p class="theme">Travel into space, body, sea and past.</p>
+        <p class="creators">Creators: Hannah, Johanna, Louisa, Othomane, Lukas </p>
+
+    </div>
 
   </div>
 
-</div>
+  <div class="interlude">\\ MUSIC INTERLUDE PROVIDED BY NICK & LOUISA //</div>
+
+
+  <!-- DAD PLAYLIST EPHEMERA -->
+
+  <div class="show">
+
+    <img class="show_logo" src="placeholder.svg">
+
+    <div class="time">13:15</div>
+
+    <div class="description">
+        <div class="title">DAD PLAYLIST EPHEMERA</div>
+        <p class="theme">A curation of eclectic, thematic playlists and letting parents influence the DAE soundtrack.</p>
+        <p class="creators">Creators: Elisa, Marie, Emma</p>
+
+    </div>
+
+  </div>
+
+  <div class="interlude">\\ MUSIC INTERLUDE PROVIDED BY NICK & LOUISA //</div>
+
+
+  <!-- LEARNING THINGS IN REAL TIME -->
+
+  <div class="show">
+
+    <img class="show_logo" src="learning_logo.jpg">
+
+    <div class="time">14:30</div>
+
+    <div class="description">
+        <div class="title">LEARNING THINGS IN REAL TIME</div>
+        <p class="theme">Three friends getting smarter in real time,
+          and maybe play some tunes.</p>
+        <p class="creators">Creators: Santiago, Anda, Maxine</p>
+
+    </div>
+
+  </div>
+
+  <div class="interlude">\\ MUSIC INTERLUDE PROVIDED BY NICK & LOUISA //</div>
+
+
+  <!-- AS THE WORLD TURNS -->
+
+  <div class="show">
+
+    <img class="show_logo" src="astheworldturns.jpg">
+
+    <div class="time">15:45</div>
+
+    <div class="description">
+        <div class="title">AS THE WORLD TURNS</div>
+        <p class="theme">Let me hold your hand and watch the moon rise into the night sky. Sharing stories, memories, and sounds.  </p>
+        <p class="creators">Creators: Afonso, Inês, Marina, Nick</p>
+
+    </div>
+
+  </div>
+
+  <div class="interlude">\\ MUSIC INTERLUDE PROVIDED BY NICK & LOUISA //</div>
+
+
 
 </div>
+
+
+
+
 
 <div id="right">
   HEllo
