--- a/index.html
+++ b/index.html
@@ -68,12 +68,19 @@
 </div>
 
 <div id="right">
-    <div id="header">
+    <div id="headerright">
   <h1>Now playing:</h1>
+  <img id="show_logo_right" src="placeholder.png">
+
+</div>
+<div class="audiocontainer">
+  <audio controls ></audio>
+
 </div>
     <div class="chat">
-        <script id="cid0020000266613940490" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">{"handle":"ididididradio","arch":"js","styles":{"a":"6600cc","b":100,"c":"FFFFFF","d":"FFFFFF","k":"6600cc","l":"6600cc","m":"6600cc","n":"FFFFFF","p":"10","q":"6600cc","r":100,"fwtickm":1}}</script>
-    </div>
+      <div id="chatroom">
+        <script id="cid0020000266621589883" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">{"handle":"ididididradio","arch":"js","styles":{"a":"000AFF","b":100,"c":"000000","d":"000000","k":"000AFF","l":"000AFF","m":"000AFF","p":"10","q":"000AFF","r":100,"fwtickm":1}}</script>
+  </div>  </div>
 </div>
 
 
