--- a/index.html
+++ b/index.html
@@ -40,19 +40,21 @@
 
   <div id="left">
   <div id="header">
-    <img class="radio_logo" src="logo.svg">
+    <img class="radio_logo" src="logo.png">
     <h1 class="header_title">
+      +++
+      <br>
       The Design Radio Channel
       you will all know and love
       <br>
-      ░┼░┼░┼░┼░░┼░┼░
+      +++
     </h1>
   </div>
 
   <!-- THE POWER OF ESCAPE-->
   <div class="show">
 
-    <img class="show_logo" src="placeholder.svg">
+    <img class="show_logo" src="thepower.jpg">
 
     <div class="time">12:00</div>
 
@@ -65,14 +67,16 @@
 
   </div>
 
-  <div class="interlude">\\ MUSIC INTERLUDE PROVIDED BY NICK & LOUISA //</div>
+  <div class="interlude">\\ MUSICAL INTERLUDE PROVIDED BY NICK & LOUISA //
+                        
+  </div>
 
 
   <!-- DAD PLAYLIST EPHEMERA -->
 
   <div class="show">
 
-    <img class="show_logo" src="placeholder.svg">
+    <img class="show_logo" src="dadplaylist.jpg">
 
     <div class="time">13:15</div>
 
@@ -92,7 +96,7 @@
 
   <div class="show">
 
-    <img class="show_logo" src="learning_logo.jpg">
+    <img class="show_logo" src="learning.jpg">
 
     <div class="time">14:30</div>
 
@@ -126,7 +130,22 @@
 
   </div>
 
-  <div class="interlude">\\ MUSIC INTERLUDE PROVIDED BY NICK & LOUISA //</div>
+  <!-- OPEN MIKE AND DJING -->
+
+  <div class="show">
+
+    <img class="show_logo" src="openmicanddjing.jpg">
+
+    <div class="time">17:00</div>
+
+    <div class="description">
+        <div class="title">OPEN MIC AND DJING</div>
+        <p class="theme">Let’s jam!</p>
+        <p class="creators">Creators: Everyone</p>
+
+    </div>
+
+  </div>
 
 
   <div id="shoutout">
@@ -143,7 +162,7 @@
 <div id="right">
   <div id="headerright">
 <h1>Now playing:</h1>
-<img id="show_logo_right" src="placeholder.svg">
+<img id="show_logo_right" src="#">
 
 </div>
 <div class="audiocontainer">
@@ -155,6 +174,8 @@
       <script id="cid0020000266621589883" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">{"handle":"ididididradio","arch":"js","styles":{"a":"000AFF","b":100,"c":"000000","d":"000000","k":"000AFF","l":"000AFF","m":"000AFF","p":"10","q":"000AFF","r":100,"fwtickm":1}}</script>
 </div>  </div>
 </div>
+
+<script src="script.js"></script>
 
 
 </body>
