--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 <div id="right">
   <div id="headerright">
     <h1>Now playing:</h1>
-    <img id="show_logo_right" src="learning.jpg">
+    <img id="show_logo_right" src="interlude.jpg">
 
   <div class="audiocontainer">
     <audio controls ></audio>
@@ -175,7 +175,7 @@
   </div>
 </div>
 
-<!-- <script src="script.js"></script> -->
+<script src="script.js"></script>
 
 
 </body>
