--- a/index.html
+++ b/index.html
@@ -149,11 +149,10 @@
 
 
   <div id="shoutout">
-    <h2></h2>
+    <p>This station was made possible by the good people at <a href="https://goodtimesbadtimes.club/">Good Times Bad Times Radio!</a></p>
+    <p>Make sure to check out our <a href="https://www.instagram.com/idididididradio/">instagram</a>!</p>
   </div>
-
 </div>
-
 
 
 
@@ -174,6 +173,7 @@
     </div>  
   </div>
 </div>
+
 
 <script src="script.js"></script>
 
