--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="description">
         <div class="title">THE POWER OF ESCAPE</div>
         <p class="theme">Travel into space, body, sea and past.</p>
-        <p class="creators">Creators: Hannah, Johanna, Louisa, Othomane, Lukas </p>
+        <p class="creators">Creators: Hannah, Johanna, Louisa, Othmane, Lukas </p>
 
     </div>
 
@@ -124,7 +124,7 @@
     <div class="description">
         <div class="title">AS THE WORLD TURNS</div>
         <p class="theme">Let me hold your hand and watch the moon rise into the night sky. Sharing stories, memories, and sounds.  </p>
-        <p class="creators">Creators: Afonso, Inês, Marina, Nick</p>
+        <p class="creators">Creators: Afonso, Inês, Marina, Nick, Vítor</p>
 
     </div>
 
