--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
     <img id="show_logo_right" src="interlude.jpg">
 
   <div class="audiocontainer">
-    <audio controls ></audio>
+    <audio controls>
+      <source src='https://radio.goodtimesbadtimes.club/radio/8000/radio.mp3' type='audio/mpeg'>
+    </audio>
   </div>
 </div>
   <div class="chat">
