scroll now playing

--- a/index.html
+++ b/index.html
@@ -160,9 +160,10 @@
 
 <div id="right">
   <div id="headerright">
-    <h1>Now playing:</h1>
+    <div id="nowplaying_container">
+    <div class="nowplaying">NOW PLAYING: <span id="show_playing"></span></div>
+    </div>
     <img id="show_logo_right" src="interlude.jpg">
-
   <div class="audiocontainer">
     <audio controls>
       <source src='https://radio.goodtimesbadtimes.club/radio/8000/radio.mp3' type='audio/mpeg'>
