--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <div id="left">
   <div id="header">
-    <img class="radio_logo" src="logo.png">
+    <a href="http://ididididid.club/"><img class="radio_logo" src="logo.png"></a>
     <h1 class="header_title">
       +++
       <br>
