--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 <body>
 
   <div id="left">
+    
   <div id="header">
+    
     <a href="http://ididididid.club/"><img class="radio_logo" src="logo.png"></a>
     <h1 class="header_title">
       +++
@@ -50,7 +52,7 @@
       +++
     </h1>
   </div>
-
+  <div id="staytuned"><h1 class="more_coming">MORE COMING SOON,<br>STAY TUNED!</h1></div>
   <!-- THE POWER OF ESCAPE-->
   <div class="show">
 
