--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       +++
     </h1>
   </div>
+  <div id="staytuned"><h1 class="more_coming">MORE COMING SOON,<br>STAY TUNED!</h1></div>
   <!-- THE POWER OF ESCAPE-->
   <div class="show">
 
