--- a/index.html
+++ b/index.html
@@ -52,55 +52,13 @@
       +++
     </h1>
   </div>
-  <div id="staytuned"><h1 class="more_coming">MORE COMING SOON,<br>STAY TUNED!</h1></div>
-  <!-- THE POWER OF ESCAPE-->
-  <div class="show">
 
-    <img class="show_logo" src="thepower.jpg">
-
-    <div class="time">12:00</div>
-
-    <div class="description">
-        <div class="title">THE POWER OF ESCAPE</div>
-        <p class="theme">Travel into space, body, sea and past.</p>
-        <p class="creators">Creators: Hannah, Johanna, Louisa, Othmane, Lukas </p>
-
-    </div>
-
-  </div>
-
-  <div class="interlude">\\ MUSICAL INTERLUDE PROVIDED BY NICK & LOUISA //
-                        
-  </div>
-
-
-  <!-- DAD PLAYLIST EPHEMERA -->
-
-  <div class="show">
-
-    <img class="show_logo" src="dadplaylist.jpg">
-
-    <div class="time">13:15</div>
-
-    <div class="description">
-        <div class="title">DAD PLAYLIST EPHEMERA</div>
-        <p class="theme">A curation of eclectic, thematic playlists and letting parents influence the DAE soundtrack.</p>
-        <p class="creators">Creators: Elisa, Marie, Emma</p>
-
-    </div>
-
-  </div>
-
-  <div class="interlude">\\ MUSIC INTERLUDE PROVIDED BY NICK & LOUISA //</div>
-
-
-  <!-- LEARNING THINGS IN REAL TIME -->
-
+  <!-- Learning Things In Real Time-->
   <div class="show">
 
     <img class="show_logo" src="learning.jpg">
 
-    <div class="time">14:30</div>
+    <div class="time">10:00</div>
 
     <div class="description">
         <div class="title">LEARNING THINGS IN REAL TIME</div>
@@ -112,42 +70,88 @@
 
   </div>
 
+  <div class="interlude">\\ MUSICAL INTERLUDE PROVIDED BY NICK & LOUISA //
+                        
+  </div>
+
+
+  <!-- Our Projects, An Insight -->
+
+  <div class="show">
+
+    <img class="show_logo" src="#">
+
+    <div class="time">11:15</div>
+
+    <div class="description">
+        <div class="title">OUR PROJECTS, AN INSIGHT</div>
+        <p class="theme">A programme where we discuss projects we've been developing at our masters!</p>
+        <p class="creators">Hosted by: Louisa, Hannah, Lukas</p>
+
+    </div>
+
+  </div>
+
   <div class="interlude">\\ MUSIC INTERLUDE PROVIDED BY NICK & LOUISA //</div>
 
 
-  <!-- AS THE WORLD TURNS -->
+  <!-- As The World Turns -->
 
   <div class="show">
 
     <img class="show_logo" src="astheworldturns.jpg">
 
-    <div class="time">15:45</div>
+    <div class="time">12:15</div>
 
     <div class="description">
         <div class="title">AS THE WORLD TURNS</div>
         <p class="theme">Let me hold your hand and watch the moon rise into the night sky. Sharing stories, memories, and sounds.  </p>
-        <p class="creators">Creators: Afonso, Inês, Marina, Nick, Vítor</p>
+        <p class="creators">Hosted by: Afonso, Inês, Marina, Nick, Vítor</p>
 
     </div>
 
   </div>
 
-  <!-- OPEN MIKE AND DJING -->
+  <div class="interlude">\\ MUSIC INTERLUDE PROVIDED BY NICK & LOUISA //</div>
+
+
+  <!-- Strange Times, Strange Dreams -->
 
   <div class="show">
 
-    <img class="show_logo" src="openmicanddjing.jpg">
+    <img class="show_logo" src="#">
 
-    <div class="time">17:00</div>
+    <div class="time">13:30</div>
 
     <div class="description">
-        <div class="title">OPEN MIC AND DJING</div>
-        <p class="theme">Let’s jam!</p>
-        <p class="creators">Creators: Everyone</p>
+        <div class="title">STRANGE TIMES, STRANGE DREAMS</div>
+        <p class="theme">A deep dive into dreams, and their symbolisms.</p>
+        <p class="creators">Hosted by: Marina, Lukas, Johanna</p>
 
     </div>
 
   </div>
+
+  <div class="interlude">\\ MUSIC INTERLUDE //</div>
+
+  <!-- Endless Voyage (SRS) -->
+
+  <div class="show">
+
+    <img class="show_logo" src="endless.jpg">
+
+    <div class="time">14:45</div>
+
+    <div class="description">
+        <div class="title">ENDLESS VOYAGE (SRS)</div>
+        <p class="theme">A journey through music, with Fabio on the turntabless</p>
+        <p class="creators">Hosted by: Fabio</p>
+
+    </div>
+
+  </div>
+
+  <div class="interlude">\\ MUSIC INTERLUDE //</div>
 
 
   <div id="shoutout">
@@ -168,7 +172,7 @@
     <img id="show_logo_right" src="interlude.jpg">
   <div class="audiocontainer">
     <audio controls>
-      <source src='https://radio.goodtimesbadtimes.club/radio/8000/radio.mp3' type='audio/mpeg'>
+      <source src='https://radio.goodtimesbadtimes.club/radio/8030/radio.mp3' type='audio/mpeg'>
     </audio>
   </div>
 </div>
