--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   </div>
 
-  <div class="interlude">\\ MUSICAL INTERLUDE PROVIDED BY NICK & LOUISA //
+  <div class="interlude">\\ MUSICAL INTERLUDE //
                         
   </div>
 
@@ -92,7 +92,7 @@
 
   </div>
 
-  <div class="interlude">\\ MUSIC INTERLUDE PROVIDED BY NICK & LOUISA //</div>
+  <div class="interlude">\\ MUSIC INTERLUDE //</div>
 
 
   <!-- As The World Turns -->
@@ -112,7 +112,7 @@
 
   </div>
 
-  <div class="interlude">\\ MUSIC INTERLUDE PROVIDED BY NICK & LOUISA //</div>
+  <div class="interlude">\\ MUSIC INTERLUDE //</div>
 
 
   <!-- Strange Times, Strange Dreams -->
