--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
   <div class="show">
 
-    <img class="show_logo" src="#">
+    <img class="show_logo" src="ourprojects.jpg">
 
     <div class="time">11:15</div>
 
@@ -119,7 +119,7 @@
 
   <div class="show">
 
-    <img class="show_logo" src="#">
+    <img class="show_logo" src="strangetimes.jpg">
 
     <div class="time">13:30</div>
 
