1st april broadcast

--- a/index.html
+++ b/index.html
@@ -53,42 +53,41 @@
     </h1>
   </div>
 
-  <!-- Learning Things In Real Time-->
+  <!-- AS THE WORLD TURNS -->
   <div class="show">
 
-    <img class="show_logo" src="learning.jpg">
+    <img class="show_logo" src="astheworldturns.jpg">
 
-    <div class="time">10:00</div>
+    <div class="time">11:00</div>
 
     <div class="description">
-        <div class="title">LEARNING THINGS IN REAL TIME</div>
-        <p class="theme">Three friends getting smarter in real time,
-          and maybe play some tunes.</p>
-        <p class="creators">Creators: Santiago, Anda, Maxine</p>
-
-    </div>
+      <div class="title">AS THE WORLD TURNS</div>
+      <p class="theme">Let me hold your hand and watch the moon rise into the night sky. Sharing stories, memories, and sounds.</p>
+      <p class="creators">Hosted by: Afonso, Inês, Nick, Vítor</p>
 
   </div>
 
-  <div class="interlude">\\ MUSICAL INTERLUDE //
+  </div>
+
+  <div class="interlude">\\ MUSIC INTERLUDE //
                         
   </div>
 
 
-  <!-- Our Projects, An Insight -->
+  <!-- CONNECTING GERMANY AND NAMIBIA - INTERVIEW -->
 
   <div class="show">
 
-    <img class="show_logo" src="ourprojects.jpg">
+    <img class="show_logo" src="connecting.jpg">
 
-    <div class="time">11:15</div>
+    <div class="time">12:15</div>
 
     <div class="description">
-        <div class="title">OUR PROJECTS, AN INSIGHT</div>
-        <p class="theme">A programme where we discuss projects we've been developing at our masters!</p>
-        <p class="creators">Hosted by: Louisa, Hannah, Lukas</p>
+      <div class="title">CONNECTING NAMIBIA AND GERMANY - INTERVIEW WITH FROWIN BECKER</div>
+      <p class="theme">Watch out, we touch the urgent and sensitive topic of colonialism and speak with our amazing guest about controversial monuments.</p>
+      <p class="creators">Hosted by: Louisa & Hannah</p>
 
-    </div>
+  </div>
 
   </div>
 
@@ -99,53 +98,35 @@
 
   <div class="show">
 
-    <img class="show_logo" src="astheworldturns.jpg">
-
-    <div class="time">12:15</div>
-
-    <div class="description">
-        <div class="title">AS THE WORLD TURNS</div>
-        <p class="theme">Let me hold your hand and watch the moon rise into the night sky. Sharing stories, memories, and sounds.  </p>
-        <p class="creators">Hosted by: Afonso, Inês, Marina, Nick, Vítor</p>
-
-    </div>
-
-  </div>
-
-  <div class="interlude">\\ MUSIC INTERLUDE //</div>
-
-
-  <!-- Strange Times, Strange Dreams -->
-
-  <div class="show">
-
-    <img class="show_logo" src="strangetimes.jpg">
+    <img class="show_logo" src="learning.jpg">
 
     <div class="time">13:30</div>
 
     <div class="description">
-        <div class="title">STRANGE TIMES, STRANGE DREAMS</div>
-        <p class="theme">A deep dive into dreams, and their symbolisms.</p>
-        <p class="creators">Hosted by: Marina, Lukas, Johanna</p>
-
-    </div>
+      <div class="title">FRIENDS LEARNING THINGS!</div>
+      <p class="theme">Three friends getting smarter in real time,
+        and maybe play some tunes.</p>
+      <p class="creators">Hosted by: Santiago, Anda, Maxine</p>
 
   </div>
 
-  <div class="interlude">\\ MUSIC INTERLUDE //</div>
+  </div>
 
-  <!-- Endless Voyage (SRS) -->
+ <!-- <div class="interlude">\\ MUSIC INTERLUDE //</div> -->
+
+
+  <!-- Master's open call -->
 
   <div class="show">
 
-    <img class="show_logo" src="endless.jpg">
+    <img class="show_logo" src="#">
 
-    <div class="time">14:45</div>
+    <div class="time">14:30</div>
 
     <div class="description">
-        <div class="title">ENDLESS VOYAGE (SRS)</div>
-        <p class="theme">A journey through music, with Fabio on the turntabless</p>
-        <p class="creators">Hosted by: Fabio</p>
+        <div class="title">MASTERS OPEN CALL</div>
+        <p class="theme">Calling all Masters!</p>
+        <p class="creators">...</p>
 
     </div>
 
@@ -153,6 +134,42 @@
 
   <div class="interlude">\\ MUSIC INTERLUDE //</div>
 
+  <!-- SEX WORK AND CARE -->
+
+  <div class="show">
+
+    <img class="show_logo" src="sexwork.jpg">
+
+    <div class="time">15:45</div>
+
+    <div class="description">
+        <div class="title">SEX AND CARE - INTERVIEW WITH MAGGIE SAUNDERS</div>
+        <p class="theme">In this new segment of ididididid radio called Sex Work & Care, we will talk with Maggie Saunders, founder of Striptopia and Design Academy Eindhoven graduate, and discuss sex work and current social issues in the industry.</p>
+        <p class="creators">Hosted by: Marina</p>
+
+    </div>
+
+  </div>
+
+ <!-- <div class="interlude">\\ MUSIC INTERLUDE //</div> -->
+
+
+ <div class="show">
+
+  <img class="show_logo" src="openend.jpg">
+
+  <div class="time">16:45</div>
+
+  <div class="description">
+      <div class="title">OPEN END</div>
+      <p class="theme">French Pr$ss, Nick & Louisa a.k.a Polarwolf on the decks.</p>
+      <p class="creators">Hosted by: Weronika, Nick & Louisa</p>
+
+  </div>
+
+</div>
+
+ <div class="interlude"></div>
 
   <div id="shoutout">
     <p>This station was made possible by the good people at <a href="https://goodtimesbadtimes.club/">Good Times Bad Times Radio!</a></p>
@@ -172,7 +189,7 @@
     <img id="show_logo_right" src="interlude.jpg">
   <div class="audiocontainer">
     <audio controls>
-      <source src='https://radio.goodtimesbadtimes.club/radio/8030/radio.mp3' type='audio/mpeg'>
+      <source src='https://radio.goodtimesbadtimes.club/radio/8045/radio.mp3' type='audio/mpeg'>
     </audio>
   </div>
 </div>
