port 8040 and descritpion fix

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     
   <div id="header">
     
-    <a href="http://ididididid.club/"><img class="radio_logo" src="logo.png"></a>
+    <a class="logo-container" href="http://ididididid.club/"><img class="radio_logo" src="logo.png"></a>
     <h1 class="header_title">
       +++
       <br>
@@ -189,7 +189,7 @@
     <img id="show_logo_right" src="interlude.jpg">
   <div class="audiocontainer">
     <audio controls>
-      <source src='https://radio.goodtimesbadtimes.club/radio/8045/radio.mp3' type='audio/mpeg'>
+      <source src='https://radio.goodtimesbadtimes.club/radio/8040/radio.mp3' type='audio/mpeg'>
     </audio>
   </div>
 </div>
