--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
   <div class="show">
 
-    <img class="show_logo" src="#">
+    <img class="show_logo" src="opencall.jpg">
 
     <div class="time">14:30</div>
 
