--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     new Twitch.Player("twitch-embed", {
       channel: "nickmmeares",
       width: "100%",
-      height: "100%"
+      height: "100%",
+      allowfullscreen: 'true'
     });
   </script>
 
