--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="description">
         <div class="title">Jeroen Barendse of RNDR</div>
         <p class="theme">Interactive Media Designer </p>
-        <p class="creators">Live at the Info Design space (Witte Damme) right now!</p>
+        <p class="creators">Live at the Info Design space (Witte Damme)!</p>
   
     </div>
   
