--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
   <div class="show">
   
-      <div class="time">11:00</div>
+      <div class="time">11:00 - April 22nd</div>
   
       <div class="description">
         <div class="title">Jeroen Barendse of RNDR</div>
