Mea Dols De Jong

--- a/index.html
+++ b/index.html
@@ -77,18 +77,18 @@
    
   <div id="logo_poster_container">
     <a class="logo-container" href="http://ididididid.club/"><img class="radio_logo" src="logo.png"></a>
-    <img class="show_logo" src="jeroen.jpg">
+    <img class="show_logo" src="meadolsdejong.jpg">
   </div>
 
 
   <div class="show">
   
-      <div class="time">11:00</div>
+      <div class="time">10:00 — 28/4</div>
   
       <div class="description">
-        <div class="title">Jeroen Barendse of RNDR</div>
-        <p class="theme">Interactive Media Designer </p>
-        <p class="creators">Live at the Info Design space (Witte Damme) right now!</p>
+        <div class="title">Mea Dols De Jong</div>
+        <p class="theme">Documentary Filmmaker</p>
+        <p class="creators">Live at the Info Design space (Witte Damme)</p>
   
     </div>
   
