livestream adjustments needs link still

--- a/index.html
+++ b/index.html
@@ -39,19 +39,22 @@
 <body>
 
   
-<div id="left">
 
+<div id="left">
+   
+  <div id="logo_poster_container">
     <a class="logo-container" href="http://ididididid.club/"><img class="radio_logo" src="logo.png"></a>
-  
+  </div>
+
 
   <div class="show">
   
-      <div class="time">We'll be back soon!</div>
+      <div class="time">June 15th</div>
   
       <div class="description">
-        <div class="title">Follow us on <a href="https://www.instagram.com/idididididradio/">instagram</a> for more updates!</div>
+        <div class="title">Masters Graduation Show 2021!</div>
         <p class="theme"></p>
-        <p class="creators"></p>
+        <p class="creators">ididididid has the pleasure to live broadcast this years Masters Graduation Show!</p>
   
     </div>
   
@@ -60,11 +63,45 @@
 
   <div id="shoutout">
     <p>This station was made possible by the good people at <a href="https://goodtimesbadtimes.club/">Good Times Bad Times Radio!</a></p>
-    <p>Really make sure to check out our <a href="https://www.instagram.com/idididididradio/">instagram</a>!</p>
+    <p>Make sure to check out our <a href="https://www.instagram.com/idididididradio/">instagram</a>!</p>
   </div>
 
 </div>
 
+
+
+<div id="right">
+ 
+    <!-- Add a placeholder for the Twitch embed -->
+  <div id="twitch-embed"></div>
+
+  <!-- Load the Twitch embed script -->
+  <script src="https://player.twitch.tv/js/embed/v1.js"></script>
+
+  <!-- Create a Twitch.Player object. This will render within the placeholder div -->
+  <script type="text/javascript">
+    new Twitch.Player("twitch-embed", {
+      channel: "nickmmeares",
+      width: "100%",
+      height: "100%",
+      allowfullscreen: 'true'
+    });
+  </script>
+
+
+  <!--   <img id="show_logo_right" src="interlude.jpg">
+    <div class="audiocontainer">
+      <audio controls>
+        <source src='https://radio.goodtimesbadtimes.club/radio/8040/radio.mp3' type='audio/mpeg'>
+      </audio>
+    </div>
+  </div> -->
+
+
+    <script id="cid0020000266621589883" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 45%; margin-right:20px;">{"handle":"ididididradio","arch":"js","styles":{"a":"000AFF","b":100,"c":"000000","d":"000000","k":"000AFF","l":"000AFF","m":"000AFF","p":"10","q":"000AFF","r":100,"fwtickm":1}}</script>
+
+
+</div>
 
 
 
